--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "botTele",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "node app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
